Updating Java code